Updates to Core SPI and API. Incompatible changes in Serialization SPI (more may come). Code Reformat.