@@ -19,7 +19,6 @@
  */
 package org.qi4j.runtime.injection.provider;
 
-import java.lang.reflect.Constructor;
 import org.qi4j.api.composite.NoSuchTransientTypeException;
 import org.qi4j.api.object.NoSuchObjectTypeException;
 import org.qi4j.api.structure.Module;
@@ -31,7 +30,8 @@ import org.qi4j.runtime.injection.InjectionContext;
 import org.qi4j.runtime.injection.InjectionProvider;
 import org.qi4j.runtime.injection.InjectionProviderFactory;
 import org.qi4j.runtime.model.Resolution;
-import org.qi4j.bootstrap.InvalidInjectionException;
+
+import java.lang.reflect.Constructor;
 
 /**
  * JAVADOC
@@ -44,10 +44,10 @@ public final class UsesInjectionProviderFactory
     }
 
     @Override
-    public InjectionProvider newInjectionProvider( Resolution resolution, DependencyModel dependencyModel )
+    public InjectionProvider newInjectionProvider(Resolution resolution, DependencyModel dependencyModel)
         throws InvalidInjectionException
     {
-        return new UsesInjectionProvider( dependencyModel );
+        return new UsesInjectionProvider(dependencyModel);
     }
 
     private static class UsesInjectionProvider
@@ -55,22 +55,22 @@ public final class UsesInjectionProviderFactory
     {
         private final DependencyModel dependency;
 
-        public UsesInjectionProvider( DependencyModel dependency )
+        public UsesInjectionProvider(DependencyModel dependency)
         {
             this.dependency = dependency;
         }
 
-        @SuppressWarnings( "unchecked" )
+        @SuppressWarnings("unchecked")
         @Override
-        public Object provideInjection( InjectionContext context )
+        public Object provideInjection(InjectionContext context)
             throws InjectionProviderException
         {
             UsesInstance uses = context.uses();
 
             Class injectionType = dependency.rawInjectionType();
-            Object usesObject = uses.useForType( injectionType );
+            Object usesObject = uses.useForType(injectionType);
 
-            if( usesObject == null && !dependency.optional() )
+            if(usesObject == null && !dependency.optional())
             {
                 // No @Uses object provided
                 // Try instantiating a Transient or Object for the given type
@@ -78,36 +78,36 @@ public final class UsesInjectionProviderFactory
 
                 try
                 {
-                    if( context.instance() != null )
+                    if(context.instance() != null)
                     {
-                        uses = uses.use( context.instance() );
+                        uses = uses.use(context.instance());
                     }
-                    usesObject = moduleInstance.newTransient( injectionType, uses.toArray() );
+                    usesObject = moduleInstance.newTransient(injectionType, uses.toArray());
                 }
-                catch( NoSuchTransientTypeException e )
+                catch(NoSuchTransientTypeException e)
                 {
                     try
                     {
-                        usesObject = moduleInstance.newObject( injectionType, uses.toArray() );
+                        usesObject = moduleInstance.newObject(injectionType, uses.toArray());
                     }
-                    catch( NoSuchObjectTypeException e1 )
+                    catch(NoSuchObjectTypeException e1)
                     {
                         // Could not instantiate an instance - to try instantiate as plain class
                         try
                         {
-                            usesObject = injectionType.newInstance();
+                            usesObject = injectionType.getDeclaredConstructor().newInstance();
                         }
-                        catch( Throwable e2 )
+                        catch(Throwable e2)
                         {
                             // Could not instantiate - try with this as first argument
                             try
                             {
-                                Constructor constructor = injectionType.getDeclaredConstructor( context.instance()
-                                                                                                    .getClass() );
-                                AccessibleObjects.accessible( constructor );
-                                usesObject = constructor.newInstance( context.instance() );
+                                Constructor constructor = injectionType.getDeclaredConstructor(context.instance()
+                                    .getClass());
+                                AccessibleObjects.accessible(constructor);
+                                usesObject = constructor.newInstance(context.instance());
                             }
-                            catch( Throwable e3 )
+                            catch(Throwable e3)
                             {
                                 // Really can't instantiate it - ignore
                             }
@@ -115,9 +115,9 @@ public final class UsesInjectionProviderFactory
                     }
                 }
 
-                if( usesObject != null )
+                if(usesObject != null)
                 {
-                    context.setUses( context.uses().use( usesObject ) ); // Use this for other injections in same graph
+                    context.setUses(context.uses().use(usesObject)); // Use this for other injections in same graph
                 }
 
                 return usesObject;
